examples/test/testpolicy237.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy237
  namespace: namespace489
spec:
  podSelector:
    matchLabels:
      key33: value38
      key44: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value28
          key10: value32
          key20: value20
      podSelector:
        matchLabels:
          key34: value3
